# Integrated_Telco_Customer_Churn_Framework

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirments.txt
conf/: config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
integrated_telco_customer_analytics/: __init__.py  dataset.py  features.py  plots.py
integrated_telco_customer_analytics/modeling/: predict.py  train.py
notebooks/: 01_preprocessing.ipynb  02_eda_dataCleaning.ipynb  03_2_compare_experiments.ipynb  03_churn_prediction.ipynb  04_factor_analysis.ipynb  05_customer_segmentation_customer_behaviour_analysis.ipynb
reports/basemodel/: evaluation_report.json  metrics.json
reports/behaviour_analysis/: churned_segmented.parquet  feature_odds_effects.csv  logistic_regression_model.pkl  segment_profiles.csv
reports/decision_tree/: metrics.json
reports/logistic_regression/: metrics.json
reports/naive_bayes/: metrics.json
reports/random_forest/: metrics.json
reports/svm/: metrics.json
src/: inference_engine.py  server.py
src/training_pipeline/: model_evaluate.py  model_train.py  proc_data.py
