[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "integrated_telco_customer_analytics"
version = "0.0.1"
description = "This project combines both churn prediction and customer segmentation as integrated telco customer analytics framework for churn management."
authors = [
  { name = "Abdelhakiem" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["integrated_telco_customer_analytics"]
include = ["pyproject.toml", "integrated_telco_customer_analytics/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["integrated_telco_customer_analytics"]
force-sort-within-sections = true

